# JUCETemplate

./: .gitignore  CMakeLists.txt  README.md
Source/: .CMakeLists.txt.swp  CMakeLists.txt  Headers.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
